# ai-qa-agents-python

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  graph.py  main.py  pyproject.toml  run.sh  server.py  setup.sh
.github/workflows/: ci-pipeline.yml  docs.yml  qe-agents.yml
agents/: code_quality_agent.py  entrypoint_agent.py  manual_qa_agent.py  tech_writer_agent.py  test_auto_architect_agent.py  test_auto_engineer_agent.py
ai_qa_agents_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: config.py  llm.py  telemetry.py
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: agents.md  architecture.md  configuration.md  deployment.md  intro.md  orchestration.md  tutorials.md  use-cases.md
docs/src/components/: MatrixBackground.tsx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/src/theme/: Root.tsx
docs/src/theme/Footer/: index.tsx
tests/: test_agents.py  test_graph.py  test_server.py  test_telemetry.py
