[project]
name = "ai-qa-agents-python"
version = "0.1.0"
description = "Multi-agent framework for Quality Engineering using LangGraph"
authors = [
    { name = "Vinícius Fagundes" }
]
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-community",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests",
    "pytest",
    "pytest-mock",
    "fastapi",
    "uvicorn",
    "httpx",
    "ruff",
    "pytest-cov",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "core"]
py-modules = ["graph", "main", "server"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
